Added subtle background pattern

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,8 @@
-<h1> Books You Can Borrow </h1>
+<header>
+   <p class='logo'>Borrow a Book</p>
+</header>
 
+<h1> Books You Can Borrow </h1>
 <ul id='books'>
   <% @books.each do |book| %>
     <li>
